chore: optimize ApiGateway coverage to 95% and fix lint warnings